hude audit + rewrite