@@ -16,29 +16,52 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-import org.springframework.security.web.header.writers.ReferrerPolicyHeaderWriter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.time.Duration;
 import java.util.Arrays;
 import java.util.List;
 
-/**
- * Enhanced security configuration implementing OWASP best practices.
- * Features:
- * - JWT authentication with token blacklisting
- * - Rate limiting and brute force protection
- * - Comprehensive security headers
- * - BCrypt password hashing
- * - Audit logging
- * - CORS with strict origin validation
- */
 @Configuration
 @EnableWebSecurity
 @EnableMethodSecurity(prePostEnabled = true, securedEnabled = true, jsr250Enabled = true)
 @RequiredArgsConstructor
 public class SecurityConfig {
+
+    private static final String[] PUBLIC_AUTH_ENDPOINTS = {
+            "/auth/register",
+            "/auth/login",
+            "/auth/refresh",
+            "/auth/verify-email",
+            "/auth/forgot-password",
+            "/auth/reset-password",
+            "/h2-console/**"
+    };
+
+    private static final String[] PUBLIC_STATIC_ENDPOINTS = {
+            "/",
+            "/index.html",
+            "/favicon.ico",
+            "/static/**",
+            "/assets/**",
+            "/*.js",
+            "/*.css",
+            "/*.png",
+            "/*.jpg",
+            "/*.svg",
+            "/courses",
+            "/courses/**",
+            "/notifications",
+            "/notifications/**",
+            "/assignments/**",
+            "/modules/**",
+            "/quizzes/**",
+            "/dashboard/**",
+            "/profile/**",
+            "/settings/**"
+    };
 
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
     private final SecurityHeadersFilter securityHeadersFilter;
@@ -61,80 +84,17 @@ public class SecurityConfig {
                         cors.disable();
                     }
                 })
-                .sessionManagement(session -> session
-                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-                        .maximumSessions(1)
-                        .maxSessionsPreventsLogin(false))
-
-                // Enhanced security headers
-                .headers(headers -> headers
-                        .contentSecurityPolicy(csp -> csp
-                                .policyDirectives("default-src 'self'; frame-ancestors 'none'; upgrade-insecure-requests;"))
-                        .httpStrictTransportSecurity(hsts -> hsts
-                                .includeSubDomains(true)
-                                .maxAgeInSeconds(31536000))
-                        .frameOptions(frame -> frame.deny())
-                        .xssProtection(xss -> xss.headerValue(org.springframework.security.web.header.writers.XXssProtectionHeaderWriter.HeaderValue.ENABLED_MODE_BLOCK))
-                        .contentTypeOptions(contentType -> contentType.disable())
-                        .referrerPolicy(referrer -> referrer
-                                .policy(ReferrerPolicyHeaderWriter.ReferrerPolicy.STRICT_ORIGIN_WHEN_CROSS_ORIGIN))
-                        .permissionsPolicy(permissions -> permissions
-                                .policy("geolocation=(), microphone=(), camera=(), payment=(), usb=()"))
-                )
-
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
-                        // Public endpoints (without /api prefix since it's in context-path)
-                        .requestMatchers(
-                                "/auth/register",
-                                "/auth/login",
-                                "/auth/verify-email",
-                                "/auth/forgot-password",
-                                "/auth/reset-password",
-                                "/h2-console/**"
-                        ).permitAll()
-                        // Health and monitoring (restricted)
-                        .requestMatchers("/actuator/health").permitAll()
-                        .requestMatchers("/actuator/info").permitAll()
+                        .requestMatchers(PUBLIC_AUTH_ENDPOINTS).permitAll()
+                        .requestMatchers("/actuator/health", "/actuator/info").permitAll()
                         .requestMatchers("/actuator/prometheus").hasRole("SUPERADMIN")
-                        // Admin endpoints
-                        .requestMatchers("/admin/**").hasRole("SUPERADMIN")
-                        .requestMatchers("/actuator/**").hasRole("SUPERADMIN")
-                        // User management - role-based access
-                        .requestMatchers(HttpMethod.DELETE, "/users/**").hasAnyRole("SUPERADMIN", "ADMIN")
+                        .requestMatchers("/admin/**", "/actuator/**").hasRole("SUPERADMIN")
+                        .requestMatchers(HttpMethod.DELETE, "/users/**").hasRole("SUPERADMIN")
                         .requestMatchers(HttpMethod.PUT, "/users/*/role").hasRole("SUPERADMIN")
-                        // Static resources and non-API paths (for SPA fallback) - permit but will 404
-                        .requestMatchers(
-                                "/",
-                                "/index.html",
-                                "/favicon.ico",
-                                "/static/**",
-                                "/assets/**",
-                                "/*.js",
-                                "/*.css",
-                                "/*.png",
-                                "/*.jpg",
-                                "/*.svg",
-                                "/courses",
-                                "/courses/**",
-                                "/notifications",
-                                "/notifications/**",
-                                "/assignments/**",
-                                "/modules/**",
-                                "/quizzes/**",
-                                "/dashboard/**",
-                                "/profile/**",
-                                "/settings/**"
-                        ).permitAll()
-                        // All other requests require authentication
+                        .requestMatchers(PUBLIC_STATIC_ENDPOINTS).permitAll()
                         .anyRequest().authenticated()
                 )
-
-                // Add security filters in correct order
-                .addFilterBefore(rateLimitingFilter, UsernamePasswordAuthenticationFilter.class)
-                .addFilterBefore(securityHeadersFilter, RateLimitingFilter.class)
-                .addFilterBefore(jwtAuthenticationFilter, SecurityHeadersFilter.class)
-
-                // Exception handling
                 .exceptionHandling(exception -> exception
                         .authenticationEntryPoint((request, response, authException) -> {
                             response.setStatus(401);
@@ -146,33 +106,33 @@ public class SecurityConfig {
                             response.setContentType("application/json");
                             response.getWriter().write("{\"error\":\"Forbidden\",\"message\":\"Access denied\"}");
                         })
-                );
+                )
+                .addFilterBefore(securityHeadersFilter, UsernamePasswordAuthenticationFilter.class)
+                .addFilterAfter(rateLimitingFilter, SecurityHeadersFilter.class)
+                .addFilterAfter(jwtAuthenticationFilter, RateLimitingFilter.class);
 
         return http.build();
     }
 
     @Bean
     public PasswordEncoder passwordEncoder() {
-        // Using BCrypt for broader compatibility
-        // In production, consider Argon2PasswordEncoder.defaultsForSpringSecurity_v5_8()
         return new BCryptPasswordEncoder();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
+        List<String> allowedOrigins = Arrays.stream(allowedOriginsStr.split(","))
+                .map(String::trim)
+                .filter(origin -> !origin.isEmpty())
+                .toList();
+        if (allowedOrigins.isEmpty()) {
+            allowedOrigins = List.of("http://localhost:3000");
+        }
+
         CorsConfiguration configuration = new CorsConfiguration();
-
-        // Parse allowed origins from comma-separated string
-        String[] allowedOrigins = allowedOriginsStr.split(",");
-
-        // Strict origin validation
-        configuration.setAllowedOrigins(Arrays.asList(allowedOrigins));
-
-        // Explicit allowed methods
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-
-        // Explicit allowed headers
-        configuration.setAllowedHeaders(Arrays.asList(
+        configuration.setAllowedOrigins(allowedOrigins);
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of(
                 "Authorization",
                 "Content-Type",
                 "Accept",
@@ -181,23 +141,17 @@ public class SecurityConfig {
                 "Access-Control-Request-Method",
                 "Access-Control-Request-Headers"
         ));
-
-        // Expose specific headers
-        configuration.setExposedHeaders(Arrays.asList(
+        configuration.setExposedHeaders(List.of(
                 "Authorization",
                 "X-Total-Count",
                 "X-Page-Number",
                 "X-Page-Size"
         ));
-
         configuration.setAllowCredentials(true);
-
-        // Cache preflight requests for 1 hour
-        configuration.setMaxAge(3600L);
+        configuration.setMaxAge(Duration.ofHours(1));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 }
-
